# SWITH

./: README.md
Server/: README.md  build.gradle  gradlew  settings.gradle
Server/src/main/java/com/ggomak/springboot2/: Springboot2Application.java
Server/src/main/java/com/ggomak/springboot2/controller/: BoardApiController.java  BoardController.java  ContentApiController.java  ContentController.java  DataApiController.java  DataController.java  LoginApiController.java  LoginController.java  (+1 more)
Server/src/main/resources/static/css/: videolist.css
Server/src/main/resources/static/js/: chart.js  jquery.min.js  login.js
Server/src/main/resources/templates/: chart.html  main.html
Server/src/main/resources/templates/board/: content.html  noticelist.html
Server/src/main/resources/templates/layout/: footer.html  header.html
Server/src/main/resources/templates/login/: login.html  signup.html
Server/src/test/java/com/ggomak/springboot2/: JpaMappingTest.java  Springboot2ApplicationTests.java
client/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  sendSpike.cpp
client/eyeLike/: CMakeCache.txt  Readme.md  cmake_install.cmake
client/eyeLike/src/: CMakeLists.txt  cmake_install.cmake  curlSend.cpp  curlSend.h  eyeLike.cpp  eyeLike.h  findEyeCenter.cpp  main.cpp  socket.cpp  socket.h
client/spike/: a.out  minmax.cpp  sendSpike.cpp  setBoundary.cpp  sigalarm.c
client/src/: sendSpike.cpp
client/swith_client/: .gitignore  CMakeCache.txt  CMakeLists.txt  Readme.md  cmake_install.cmake
client/swith_client/src/: CMakeLists.txt  cmake_install.cmake  curlSend.cpp  curlSend.h  eyeLike.cpp  eyeLike.h  findEyeCenter.cpp  findEyeCorner.cpp  logEyeTracking.cpp  logEyeTracking.h  main.cpp  setBoundary.cpp  swith.h
(+33 files in other folders)
